create github pages

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <div class="col-md-12">
                 <p class="mbr-fonts-style mbr-text mbr-white align-left display-7"><strong>Helping Thousands of Network Marketers Get Closer to Their Dreams of Freedom</strong><br></p>
                 <h3 class="mbr-section-subtitle align-left mbr-fonts-style mbr-light pb-3 mbr-white display-5"><strong>Real Leads For Your Income</strong></h3>
-                <h2 class="mbr-section-title align-left mbr-fonts-style mbr-bold mbr-white display-1">Discover The The Right Leads That Makes You Richer</h2>
+                <h2 class="mbr-section-title align-left mbr-fonts-style mbr-bold mbr-white display-1">Discover The The Right Leads<br>That Makes You Richer</h2>
             </div>
         </div>
     </div>
