--- a/index.html
+++ b/index.html
@@ -94,13 +94,7 @@
     
 </section>
 
-<div id="custom-html-6"><!-- Type valid HTML here -->
-
-<div>
-    <h1 class="display-1">Custom HTML Block</h1>
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="#777" width="200" height="200"><path d="M6.1 8.7L2.8 12l3.3 3.3-1.4 1.4L0 12l4.7-4.7 1.4 1.4zm13.2-1.4l-1.4 1.4 3.3 3.3-3.3 3.3 1.4 1.4L24 12l-4.7-4.7zM8.1 18.6l1.8.8 6-14-1.8-.8-6 14z"></path></svg>
-    <p class="display-3">Click to Open Code Editor</p>
-</div></div>
+<div class="AW-Form-593621521 cid-rv0h9co4wc" id="header6-a" data-rv-view="108"></div>
 
 <section once="" class="cid-rv00IkqYBS" id="footer01-7">
 
