create github pages

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-Real Leads For Your Income www.BestProLeads.com Discover The Right Leads That Makes You Richer. <!DOCTYPE html>
+<!DOCTYPE html>
 <html  >
 <head>
   
