--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://gllists.github.io/leads/" method="POST" class="mbr-form form-with-styler">
+<form action="http://bestproleads.com" method="POST" class="mbr-form form-with-styler">
 <div class="form-row">
 
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
