--- a/index.html
+++ b/index.html
@@ -124,10 +124,10 @@
 <hr>
 </div>
 <div data-for="name" class="col-lg-12 col-sm-12 form-group">
-<input type="text" name="name" placeholder="Name" data-form-field="name" class="form-control display-7" value="" id="name-formbuilder-b">
+<input type="text" name="name" placeholder="Name" data-form-field="name" class="form-control display-7" required="required" value="" id="name-formbuilder-b">
 </div>
 <div data-for="email" class="col-lg-12 col-sm-12 form-group">
-<input type="email" name="email" placeholder="Email" data-form-field="email" class="form-control display-7" value="" id="email-formbuilder-b">
+<input type="email" name="email" placeholder="Email" data-form-field="email" class="form-control display-7" required="required" value="" id="email-formbuilder-b">
 </div>
 <div data-for="phone" class="col-lg-12 col-sm-12 form-group">
 <input type="tel" name="phone" placeholder="Mobile" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" data-form-field="phone" class="form-control display-7" value="" id="phone-formbuilder-b">
