create github pages

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/target-122x122.png" type="image/x-icon">
-  <meta name="description" content="Real Leads For Your Income www.BestProLeads.com Discover The Right Leads That Makes You Richer. ">
+  <meta name="description" content="EarnCashforYou.com | Real Leads For Your Income. Discover The Right Leads That Makes You Richer. ">
   
-  <title>BestproLeads.com</title>
+  <title>Best Pro Leads</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
