--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
 <div data-for="email" class="col-lg-12 col-sm-12 form-group">
 <input type="email" name="email" placeholder="Email" data-form-field="email" class="form-control display-7" required="required" value="" id="email-formbuilder-b">
 </div>
-<div data-for="phone" class="col-lg-12 col-sm-12 form-group">
-<input type="tel" name="phone" placeholder="Mobile" pattern="" data-form-field="phone" class="form-control display-7" value="" id="phone-formbuilder-b">
+<div class="col-lg-12 form-group" data-for="phone">
+<input type="tel" name="phone" placeholder="Phone 555-555-5555" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" data-form-field="phone" class="form-control display-7" value="" id="phone-formbuilder-b">
 </div>
 <div class="col-lg-12">
 <button type="submit" class="btn btn-primary display-7">JUST DO IT!</button>
