--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="http://bestproleads.com" method="POST" class="mbr-form form-with-styler">
+<form action="https://gllists.github.io/leads/" method="POST" class="mbr-form form-with-styler">
 <div class="form-row">
 
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
@@ -129,7 +129,7 @@
 <div data-for="email" class="col-lg-12 col-sm-12 form-group">
 <input type="email" name="email" placeholder="Email" data-form-field="email" class="form-control display-7" required="required" value="" id="email-formbuilder-b">
 </div>
-<div class="col-lg-12 form-group" data-for="text">
+<div data-for="text" class="col-lg-12 form-group">
 <input type="text" name="text" placeholder="Phone" data-form-field="text" class="form-control display-7" value="" id="text-formbuilder-b">
 </div>
 <div class="col-lg-12">
