--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="LEAD CAP PG"><input type="hidden" name="email" data-form-email="true" value="q1q1qKjfYG6gZONgTrUVXSeCKH7MHrmfBk55DmEMpe+sFVfkEwYK8QODTZrriao/rDkzkSZ1dB8QKb/u0ED0nsGDbfRXMH8FGza6HO4/Nx8TBh8kxFm4vpHjntyIlpNU">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="LEAD CAP PG"><input type="hidden" name="email" data-form-email="true" value="uH4+FD7/GxcvrzwBYFI3RjUcwJNpnoW+iFUBIJ3VQ8SbXADZCm8tz5yNGlTAfMFU5/kC7ofPYgXExK7dcx9Gn/AOlQbz/rDl3q/LY+iKu4AwuvbnQF9xeJGRTJZTKp5Q">
 <div class="form-row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">Oops...! some problem!</div>
@@ -120,7 +120,7 @@
 <div class="col-lg-12">
 <h4 class="mbr-fonts-style display-5">Join the list worth joining.</h4>
 </div>
-<div class="col-lg-12 col-md-12 col-sm-12">
+<div class="col-lg-12">
 <hr>
 </div>
 <div data-for="name" class="col-lg-12 form-group">
@@ -129,12 +129,10 @@
 <div data-for="email" class="col-lg-12 form-group">
 <input type="email" name="email" placeholder="Email" data-form-field="email" class="form-control display-7" required="required" value="" id="email-formbuilder-e">
 </div>
-<div class="col-lg-12 form-group" data-for="number">
-<input type="number" name="number" placeholder="Phone" max="15" min="10" step="1" data-form-field="number" class="form-control display-7" value="" id="number-formbuilder-e">
+<div class="col-lg-12 form-group" data-for="text">
+<input type="text" name="text" placeholder="Phone" data-form-field="text" class="form-control display-7" value="" id="text-formbuilder-e">
 </div>
-<div class="col-auto">
-<button type="submit" class="btn btn-primary display-7">Submit</button>
-</div>
+<div class="col-lg-12"><button type="submit" class="btn btn-secondary display-5">JUST DO IT!</button></div>
 </div>
 </form><!--Formbuilder Form-->
 </div>
